--- a/templates/musicboard/music_recommend.html
+++ b/templates/musicboard/music_recommend.html
@@ -31,6 +31,7 @@
                         {% for name, music in double_chord_recommend_dict.items %}
                             <p><h5>{{ music.ranking }}: {{ name }}</h5></p>
                             <P><!-- Not Allowed Attribute Filtered ( allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture") --><iframe width="560" height="315" src="{{ music.iframe_url }}" frameborder="0" allowfullscreen=""></iframe></P>
+                            <p>link: <a href="{{ music.url }}" target="_blank">{{ music.url }}</a></p>
                             <p><strong>Same Progression Count : {{ music.total_count }}</strong></p>
 <!--                            <p><strong>Same Progression info : {{ music.chord_count }}</strong></p>-->
                             <br><br>
